# SelfTevHalos

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TAxis.h  TGrid2D.h  analytical_solution.h  diffusion.cpp  dump.cpp  energy_losses.cpp  evolutors.cpp  evolve.cpp  main.cpp  params.cpp  params.h  sources.cpp  tests.cpp  tridiag.cpp  tridiag.h  units.h  utilities.cpp  utilities.h  waves.cpp  waves.h
include/: TAxis.h  TGrid2D.h  analytical_solution.h  common.h  params.h  tridiag.h  units.h  utilities.h  waves.h
libs/utilities/: CMakeLists.txt
libs/utilities/include/utilities/: misc.h  units.h
libs/utilities/src/: misc.cpp
plots/: plot4test.py  plot_Dzz.py  plot_crs.py  plot_fcr.py  plot_heatmap.py  plot_initial.py  plot_lib.py  plot_losses.py  plot_source.py  tim.txt  utilities.py
src/: builders.cpp  common.cpp  diffusion.cpp  dump.cpp  energy_losses.cpp  evolutors.cpp  evolve.cpp  main.cpp  params.cpp  scratch.cpp  sources.cpp  tridiag.cpp  utilities.cpp  waves.cpp
tests/: test_common.cpp  test_nintegrate.cpp
